--- a/index.html
+++ b/index.html
@@ -3,16 +3,18 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <div class="overall-container">
         <h1>Generate a 
             <br>
             <span style="color:#4ADF86">random password</span>
             </h1>
         <h2>Never use an insecure password again.</h2>
-        <button id="generate-pass" onclick="generatePass()">Generate passwords</button>
+        <button id="generate-pass" onclick="renderPasswords()">Generate passwords</button>
         <hr>
-        <div class="container">
-            <div class="pass-text" id="first-pass" onclick="copyPass1()"></div>
-            <div class="pass-text" id="second-pass" onclick="copyPass2()"></div>
+        <div class="password-container">
+            <div class="pass-text" id="first-pass" onclick="copyPass(firstPass)"></div>
+            <div class="pass-text" id="second-pass" onclick="copyPass(secondPass)"></div>
+        </div>
         </div>
         <script src="index.js"></script>
     </body>
